tests/failing/func-call-bad-arg-type-3.c

int func1(char a, char b, char c) {
    return 3;
}

int main() {
    func1('a', 'b', 123); // third arg is wrong
}
